# aws-greengrass-core-sdk-rust

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  build.rs  build.sh  dockerbuild.sh  wrapper.h
examples/: echo.rs  hello.rs  invokee.rs  invoker.rs  longlived.rs  shadow.rs
scripts/: ArmDockerfile  Dockerfile  copybindings.sh  copytarget-arm.sh  copytarget.sh  copyzip.sh  coverage.sh
src/: bindings.rs  client.rs  context.rs  error.rs  handler.rs  iotdata.rs  lambda.rs  lib.rs  log.rs  request.rs  runtime.rs  secret.rs  shadow.rs
stubs/: CMakeLists.txt  README.md
stubs/include/shared/: greengrasssdk.h
stubs/src/: greengrasssdk.c
