[package]
name = "aws_greengrass_core_rust"
version = "0.1.26"
authors = ["Pete Matern <pete.matern@nike.com", "Jack Wright <jack.wright@nike.com>"]
edition = "2018"

[features]
default = []
mock = []

[build-dependencies]
bindgen = "0.52.0"

[dependencies]
log = "^0.4"
lazy_static = "^1.4"
crossbeam-channel = "^0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
uuid = {version = "0.8", features = ["v4"]}
