[package]
name = "aws_greengrass_core_rust"
description = "Provides an idiomatic Rust wrapper around the AWS Greengrass Core C SDK to more easily enable Greengrass native lambda functions in Rust."
version = "0.1.36"
authors = ["Pete Matern <pete.matern@nike.com>", "Jack Wright <jack.wright@nike.com>"]
edition = "2018"
license = "Apache-2.0"
build = "build.rs"

[features]
default = []
mock = []
# Feature that must be turned on for coverage tools not to fail
# For some reason they are having issues with the bindgen stuff, which isn't used for most tests anyways
coverage = [ "uuid" ]

[build-dependencies]
bindgen = "0.52.0"
cmake = "0.1"

[dependencies]
log = "^0.4"
lazy_static = "^1.4"
crossbeam-channel = "^0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12"
uuid = {version = "0.8", features = ["v4"], optional = true }

[dev-dependencies]
uuid = {version = "0.8", features = ["v4"] }
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
